# aloelite

./: .gitignore  .technoproj  Dockerfile  Makefile  README.md  config  pyproject.toml  sql
.github/workflows/: main.yml  publish.yml
aloelite/: __init__.py  aloelite.py  cli.py  crypto.py  db.py  descriptor.py  errors.py  fuse.py  models.py  operations.py  path.py  pin.py  resolve.py  types.py
aloelite/config/: sql-templates.yaml
config/: mount-api.yaml  sql-templates.yaml
doc/: ENCRYPTION.md  FAQ.md  GETTING_STARTED.md  REQUIREMENTS.md  TROUBLESHOOTING.md  api_testing.md  csi_driver.md  encryption.md  manager_container.md  requirements.md  volume_manager.md
manager/: __init__.py  __main__.py  api.py  direct.py  errors.py  preflight.py  store.py  supervisor.py  test_supervisor.py  web.py
manager/templates/: admin.html
notebook/: aloelite.ipynb
script/: journal_mode_check.sh
sql/: schema.sql
tests/: test_cli.py  test_direct.py  test_encryption.py  test_integration.py  test_operations.py  test_path.py  test_store.py
