[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aloelite"
version = "0.3.0rc3"
description = "Aloelite SQLite Filesystem"
readme = "README.md"
authors = [
    {name = "Michael Godfrey", email = "michael@aloecraft.org"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography",
    "pydantic",
    "pyyaml",
    "msgpack",
    "flask",         # or fastapi + uvicorn
]

[project.optional-dependencies]
fuse = [
    "pyfuse3",
    "trio",
]
test = [
    "pytest",
]

[project.scripts]
aloelite = "aloelite.cli:main"
aloelite-fuse = "aloelite.fuse:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aloelite*", "manager*"]

[tool.setuptools.package-data]
aloelite = ["config/*.yaml", "sql/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["."]